--- a/src/MovieApp/MovieApp.Core/AddMoviePage.xaml
+++ b/src/MovieApp/MovieApp.Core/AddMoviePage.xaml
@@ -2,5 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MovieApp.Core.AddMoviePage">
-        
+    
+    <StackLayout>
+        <Label Text="Title"></Label>
+        <Entry></Entry>
+        <Label Text="Overview"></Label>
+        <Editor></Editor>
+        <Label Text="Release date"></Label>
+        <DatePicker></DatePicker>
+    </StackLayout>
+    
 </ContentPage>
