--- a/src/MovieApp/MovieApp.Core/AddMoviePage.xaml
+++ b/src/MovieApp/MovieApp.Core/AddMoviePage.xaml
@@ -7,11 +7,11 @@
     <ScrollView>
         <StackLayout Spacing="4" Margin="6">
             <Label Text="Title"></Label>
-            <Entry x:Name="TitleEntry"></Entry>
+            <Entry Text="{Binding Title}"></Entry>
             <Label Text="Overview"></Label>
-            <local:ExtendedEditor x:Name="OverviewEditor"></local:ExtendedEditor>
+            <local:ExtendedEditor Text="{Binding Overview}"></local:ExtendedEditor>
             <Label Text="Release date"></Label>
-            <DatePicker x:Name="ReleaseDatePicker"></DatePicker>
+            <DatePicker Date="{Binding ReleaseDate}"></DatePicker>
         </StackLayout>
     </ScrollView>
 
