--- a/src/MovieApp/MovieApp.Core/MainPage.xaml
+++ b/src/MovieApp/MovieApp.Core/MainPage.xaml
@@ -3,11 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MovieApp"
              x:Class="MovieApp.Core.MainPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    
+    <ListView ItemsSource="{Binding}"/>
 </ContentPage>
