--- a/src/MovieApp/MovieApp.Core/MainPage.xaml
+++ b/src/MovieApp/MovieApp.Core/MainPage.xaml
@@ -3,6 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MovieApp"
              x:Class="MovieApp.Core.MainPage">
-    
-    <ListView ItemsSource="{Binding}"/>
+
+    <ListView ItemsSource="{Binding}">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ImageCell ImageSource="{Binding Image}"
+                       Text="{Binding Title}"
+                       Detail="{Binding Overview}">
+                </ImageCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
 </ContentPage>
